[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/spikespawn/SpikeSpawn.gd" type="Script" id=1]

[node name="SpikeSpawn" type="Spatial"]
script = ExtResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast3" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, -2 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast4" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast5" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -2 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast6" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast7" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 2 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast8" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast9" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 2 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast10" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -4 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast11" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1, 0 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast12" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 4 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8

[node name="RayCast13" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 0 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 8
